# embedded-serial-bridge

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt  run  setup
apps/: crypto.py  crypto.toml  version_check.py  weather_relay.py
embedded_serial_bridge/: __init__.py  auto_discovery.py  cli.py  comm.py  discovery.py  hdlc.py
tests/: test_hdlc.py  test_integration.py
